# build-meta-plus

./: build_meta_plus.py  pyproject.toml
tests/: test_hooks.py
tests/sample_project/: dummy.py  pyproject.toml
